# bsrc

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
src/: app.rs  bsrc.toml  main.rs
src/app/: cli.rs  mod.rs  parser.rs
