[package]
name = "bsrc"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["cargo", "wrap_help"] }
colored = "3.0.0"
eyre = "0.6.12"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.10"
